# models.py
@@ -12,7 +12,12 @@ from sqlalchemy import (
 )
 
 from sqlalchemy.sql import func
+
+from flask import json
+
 import bcrypt
+
+TIMESTAMP_FORMAT = "%Y-%m-%dT%H:%M:%S"
 
 db = SessionLocal()
 metadata = MetaData()
@@ -20,6 +25,32 @@ metadata = MetaData()
 
 def generate_uuid():
     return str(uuid4())
+
+
+class Connections(Base):
+    __tablename__ = "connections"
+
+    id = Column(String(255), primary_key=True, default=generate_uuid)
+    user_id = Column(String(255), ForeignKey("users.id"))
+    connected_user_id = Column(String(255), ForeignKey("users.id"))
+    connected_user = relationship("User", foreign_keys=[connected_user_id], back_populates="connected_to")
+    user = relationship("User", foreign_keys=[user_id], back_populates="connections")
+    connection_type = Column(Enum('clients', 'colleagues', 'mentors'),
+                             server_default='colleagues')
+    created_at = Column(DateTime, default=datetime.utcnow)
+    last_modified = Column(DateTime, default=datetime.utcnow,
+                           onupdate=datetime.utcnow)
+
+    def to_dict(self):
+        return {'user_id': self.user_id,
+                'connection_type': self.connection_type,
+                'connection': self.connected_user.username,
+                'last_seen': self.last_modified,
+                'added_at': self.created_at,
+                }
+
+    def to_json(self):
+        return json.loads(json.dumps(self.to_dict(), default=str))
 
 
 class User(Base):
@@ -32,33 +63,34 @@ class User(Base):
     password = Column(String(500), nullable=True)
     assigned_tasks = relationship("Task", secondary="assigned_tasks")
     profile = relationship("Profile", uselist=False, back_populates="user")
-    connections = relationship("Connections", back_populates="connected_user")
+    connections = relationship("Connections", back_populates="user",
+                               foreign_keys=[Connections.user_id])
+    connected_to = relationship("Connections", back_populates="connected_user",
+                                foreign_keys=[Connections.connected_user_id])
     created_at = Column(DateTime, default=datetime.utcnow)
     last_modified = Column(DateTime, default=datetime.utcnow,
                            onupdate=datetime.utcnow)
 
-    # def __init__(self, **kwargs):
-    #     """
-    #     The function takes in a dictionary of keyword arguments
-    #     and assigns the values to the class
-    #     attributes
-    #     """
-    #     self.username = kwargs.get("username")
-    #     self.email = kwargs.get("email")
-    #     self.password = kwargs.get("password")
-
     def to_dict(self):
+        """
+            The to_dict function is used to return a
+            dict representation of the object
+            :return: The dict formatted object.
+        """
         return {'email': self.email,
                 'created': self.created_at,
                 'username': self.username,
-                'assigned_tasks': self.assigned_tasks,
-                'last_seen': self.last_modified}
+                'last_seen': self.last_modified
+                }
 
     def to_json(self):
-        return json.loads(json.dumps(self.to_dict(), default=str))
+        """
+            The to_json function is used to return a
+            json representation of the object
+            :return: The json formatted object.
+        """
 
-    def get_id(self):
-        return self.id
+        return json.loads(json.dumps(self.to_dict(), default=str))
 
     def __repr__(self):
         """
@@ -92,7 +124,7 @@ class User(Base):
 
 
 class Profile(Base):
-    """Data model for user profile."""
+    """Data model for User profile."""
 
     __tablename__ = "profiles"
 
@@ -105,12 +137,21 @@ class Profile(Base):
                            onupdate=datetime.utcnow)
 
     def avatar(self, size):
+        """
+            It  returns  an image generted by encoding user email
+            from the gravatar website url
+            :return: An avatar icon.
+        """
         img_avatar = md5(self.email.lower().encode('utf-8')).hexdigest()
         return 'https://www.gravatar.com/avatar/{}?d=identicon&s={}'.format(
             img_avatar, size)
 
     def to_dict(self):
-        """returns a dictionary containing all keys/values of the instance"""
+        """
+            It returns a
+            dict representation of the object
+            :return: The dict formatted object.
+        """
         return {
             'id': self.id,
             'username': self.user.username,
@@ -119,6 +160,11 @@ class Profile(Base):
         }
 
     def to_json(self):
+        """
+            It returns a
+            json representation of the object
+            :return: The json formatted object.
+        """
         return json.loads(json.dumps(self.to_dict(), default=str))
 
 
@@ -139,22 +185,25 @@ class Task(Base):
     month = Column(Integer, default=func.month(created_at), name='month')
 
     def to_dict(self):
+        """
+            It returns a
+            dict representation of the object
+            :return: The dict formatted object.
+        """
         return {'id': self.id,
                 'user_id': self.user_id,
                 'title': self.title,
                 'task_name': self.task_name,
-                'subtasks': self.subtasks,
-                'assigned_users': self.assigned_users,
-                'month': self.month}
+                'month': self.month,
+                }
 
     def to_json(self):
+        """
+            It returns a
+            json representation of the object
+            :return: The json formatted object.
+        """
         return json.loads(json.dumps(self.to_dict(), default=str))
-
-
-# assigned_tasks = Table('assigned_tasks', Base.metadata,
-#                        Column('user_id', String(255), ForeignKey('users.id')),
-#                        Column('task_id', String(255), ForeignKey('tasks.id')),
-#                        Column('subtask_id', String(255), ForeignKey('subtasks.id')))
 
 
 class AssignedTasks(Base):
@@ -162,6 +211,33 @@ class AssignedTasks(Base):
     user_id = Column(String(255), ForeignKey('users.id'), primary_key=True)
     task_id = Column(String(255), ForeignKey('tasks.id'), primary_key=True)
     subtask_id = Column(String(255), ForeignKey('subtasks.id'))
+    assigned_at = Column(DateTime, default=datetime.utcnow)
+    last_modified = Column(DateTime, default=datetime.utcnow,
+                           onupdate=datetime.utcnow)
+
+    def to_dict(self):
+        """
+            It returns a
+            dict representation of the object
+            :return: The dict formatted object.
+        """
+
+        user = db.query(User).filter(User.id == self.user_id).first()
+        return {'user_id': self.user_id,
+                'user': user.username if user else None,
+                'task_id': self.task_id,
+                'subtask_id': self.subtask_id,
+                'assigned_at': self.assigned_at,
+
+                }
+
+    def to_json(self):
+        """
+            It returns a
+            json representation of the object
+            :return: The json formatted object.
+        """
+        return json.loads(json.dumps(self.to_dict(), default=str))
 
 
 class Subtask(Base):
@@ -185,37 +261,33 @@ class Subtask(Base):
                            onupdate=datetime.utcnow)
 
     def to_dict(self):
+        """
+            It returns a
+            dict representation of the object
+            :return: The dict formatted object.
+        """
         return {'task_id': self.task_id,
                 'due_date': self.due_date,
-                'created': self.created_at.isoformat(),
+                'created': self.created_at,
                 'title': self.title,
                 'content': self.content,
                 'assigned_to': self.assigned_to,
-                'last_seen': self.last_modified.isoformat()
+                'last_modified': self.last_modified,
+                'status': self.status
                 }
 
     def to_json(self):
+        """
+            It returns a
+            json representation of the object
+            :return: The json formatted object.
+        """
         return json.loads(json.dumps(self.to_dict(), default=str))
 
+    # def __str__(self):
+    #     return json.dumps(dict(self), cls=CustomEncoder, ensure_ascii=False)
+    #
+    # def __repr__(self):
+    #     return self.__str__()
 
-class Connections(Base):
-    __tablename__ = "connections"
-
-    id = Column(String(255), primary_key=True, default=generate_uuid)
-    user_id = Column(String(255), ForeignKey("users.id"))
-    connected_user = relationship("User", back_populates="connections")
-    connection_type = Column(Enum('clients', 'colleagues', 'mentors'),
-                             server_default='colleagues')
-    created_at = Column(DateTime, default=datetime.utcnow)
-    last_modified = Column(DateTime, default=datetime.utcnow,
-                           onupdate=datetime.utcnow)
-
-    def to_dict(self):
-        return {'connection_type': self.connection_type,
-                'connected_user': self.connected_user,
-                'last_seen': self.last_modified,
-                'addd_at': self.created_at,
-                }
-
-    def to_json(self):
-        return json.loads(json.dumps(self.to_dict(), default=str))
+# add connection type to schema as enum
