# profile.py
@@ -10,26 +10,21 @@ db = SessionLocal()
 
 # CREATE READ, UPDATE, DELETE
 
+# create_profile if not exists endpoint
 
-@jwt_required()
 def update_profile():
-    """	    It updates the user profile object
+    """	It updates the user profile object
         :return: A response object
     """
     try:
         username = request.form["username"]
         about_me = request.form["about_me"]
 
-        user = db.query(User).filter(User.username == username).first()
-        get_user_profile = db.query(Profile).filter(Profile.user_id == user.id).first()
+        get_user = db.query(User).filter(User.username == username).first()
+        get_user_profile = db.query(Profile).filter(Profile.user_id == get_user.id).first()
 
-        # return get_user_profile
-        if not get_user_profile:
-            return {"message": "Profile doesnt exist."}, status.HTTP_400_BAD_REQUEST
-
-        # gets user
-        user_account = db.query(User).filter(
-            User.username == username).first()
+        if not get_user_profile or not get_user:
+            return {"message": "User or Profile doesnt exist."}, status.HTTP_400_BAD_REQUEST
 
         get_user_profile.about_me = about_me
 
@@ -37,8 +32,8 @@ def update_profile():
         db.commit()
 
         db.refresh(get_user_profile)
-        user_account.profile = get_user_profile
-        db.add(user_account)
+        get_user.profile = get_user_profile
+        db.add(get_user)
         db.commit()
 
         return jsonify(my_profile=get_user_profile.to_dict()), 200
@@ -47,28 +42,30 @@ def update_profile():
         return jsonify(message=str(e)), status.HTTP_400_BAD_REQUEST
 
 
-@jwt_required()
 def get_profile(username):
-    """	    It gets the user profile object
-            :return: A response object
-        """
+    """	It gets the user profile object
+        :param username: The name of the user
+        :return: A response object
+    """
+
     try:
-        user = db.query(User).filter(User.username == username).first()
-        get_user_profile = db.query(Profile).filter(Profile.user_id == user.id).first()
+        get_user = db.query(User).filter(User.username == username).first()
+        get_user_profile = db.query(Profile).filter(Profile.user_id == get_user.id).first()
 
         if not get_user_profile:
             return {"message": "Profile doesnt exist."}, status.HTTP_400_BAD_REQUEST
-        return get_user_profile.to_dict(), 200
+        return jsonify(message=get_user_profile.to_json()), status.HTTP_200_OK
     except IntegrityError as e:
         db.rollback()
         return jsonify(message=str(e)), status.HTTP_400_BAD_REQUEST
 
 
-@jwt_required()
 def delete_profile(username):
-    """	    It deletes the user profile object
-            :return: A response object
-        """
+    """	It deletes the user profile object
+        :param username: The name of the user
+        :return: A response object
+    """
+
     try:
         user_account = db.query(User).filter(User.username == username).first()
         if user_account:
@@ -82,9 +79,9 @@ def delete_profile(username):
                 del user_account.profile
                 db.commit()
                 return {"message": "Profile has been successfully deleted"}
-            return jsonify(message=f'Profile with username {username} does not exist.'), status.HTTP_400_BAD_REQUEST
+            return jsonify(message=f'User Profile does not exist.'), status.HTTP_400_BAD_REQUEST
 
-        return jsonify(message=f"Account with username {username} does not exist."), status.HTTP_400_BAD_REQUEST
+        return jsonify(message=f"User Account does not exist."), status.HTTP_400_BAD_REQUEST
 
     except IntegrityError as e:
         db.rollback()
